--- a/moveit-next/package.json
+++ b/moveit-next/package.json
@@ -9,15 +9,17 @@
   },
   "dependencies": {
     "js-cookie": "^2.2.1",
-    "next": "10.0.7",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "next": "^11.0.1",
+    "next-auth": "^3.27.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@types/js-cookie": "^2.2.6",
-    "@types/node": "^14.14.31",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
-    "typescript": "^4.1.5"
+    "@types/js-cookie": "^2.2.7",
+    "@types/next-auth": "^3.15.0",
+    "@types/node": "^16.3.3",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.9",
+    "typescript": "^4.3.5"
   }
 }
